@@ -112,6 +112,15 @@ attribute_hidden SEXP mkCLOSXP(SEXP formals, SEXP body, SEXP rho)
     return c;
 }
 
+/* version for the API with more checking */
+SEXP R_mkClosure(SEXP formals, SEXP body, SEXP rho)
+{
+    CheckFormals(formals, "R_mkClosure");
+    if (! isEnvironment(rho))
+	error(_("invalid environment"));
+    return mkCLOSXP(formals, body, rho);
+}
+
 /* mkChar - make a character (CHARSXP) variable -- see Rinlinedfuns.h */
 
 /*  mkSYMSXP - return a symsxp with the string  */
